      more helpful error message when \code{dd} is not of length one,
      thanks to \I{Michael Chirico}'s \PR{18811}.

      \item \code{seq.Date()} no longer explicitly coerces results from
      integer to double, analogously with \code{seq.default()},
      \code{seq.int()} and \code{seq.POSIXt()}, resolving a \emph{modified}
      \PR{18782}.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.2 patched}{
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{kappa(A, exact=TRUE)} for singular \code{A} returns
      \code{Inf} more generally, fixing \PR{18817} reported by
      \I{Mikael Jagan}.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.2}{
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The S-compatibility macros \code{F77_COM} and
      \code{F77_COMDECL} defined in header \file{R_ext/RS.h} are
      deprecated and will be removed shortly.  We could find no record
      of their use.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \I{Mathlib} function \code{lgammacor(x)} no longer warns about
      underflow to zero for large \code{x}.

      \item Text widths and heights were incorrectly reported by the
      Quartz device if the drawing context didn't exist yet (typically
      when drawing off-screen to a window that is yet to appear, see
      \PR{18591}).

      \item The Quartz device could segfault in cases where paths with
      spaces are used in the new glyph drawing API.
      Thanks to \I{Tomek Gieorgijewski} (\PR{18758}).

      \item On macOS in R CRAN builds, it is again possible to read
      little-endian UTF-16 text with a \abbr{BOM} from a connection using
      \code{encoding="UTF-16"}.  Users building R from source should avoid
      using the system \code{libiconv} in macOS 14.1 and later.

      \item \pkg{methods}' internal \code{.requirePackage()} now re-enables
      primitive method dispatch when needed; thanks to \I{Ivan Krylov}
      for demystifying CRAN package check failures on the R-devel mailing